# vision-transformer

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  dvc-repro.sh  dvc.yaml  gpu.Dockerfile  params.yaml  pyproject.toml
src/: config.py  evaluate.py  load_dataset.py  train_cnn_for_mnist.py  train_for_experiment1.py  train_for_experiment2.py  train_for_experiment3.py  train_for_experiment4.py  train_naive_transformer.py  train_patch_transformer.py  train_util.py  util.py
src/evaluate/: attention_visualization.py  draw_patches_in_example.py  evaluate_model.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  flop_comparison.py  flops.py  load_model.py  param_comparison.py
src/layers/: extract_patches.py  mlp_head.py  multi_head_self_attention.py  position_embedding.py  token_embedding.py  transformer.py
src/model/: cnn_for_mnist.py  hybrid_transformer.py  naive_transformer.py  patch_transformer.py  transfer_learning_transformer.py
src/test/: test.py  test_pytest.py
tex/: masterarbeit.bib  masterarbeit.tex  titlepage.tex
